# FinsightRAG

./: .gitignore  Dockerfile  LICENSE  README.md  README_EN.md  config.example.yaml  pyproject.toml  requirements.txt  sample.env
.github/workflows/: ci.yml
data/output/: MorganStanleyQ10.json  MorganStanleyQ10.md  MorganStanleyQ10_answer_dry_run.json  MorganStanleyQ10_chunk_merge.json  MorganStanleyQ10_chunk_merge_bge_m3.json  MorganStanleyQ10_evidence_package.json  MorganStanleyQ10_image_enrichment.json  MorganStanleyQ10_sentence_split.json  MorganStanleyQ10_sentence_split_bge_m3.json  MorganStanleyQ10_table_enrichment.json  MorganStanleyQ10_text.md
prompts/: image_enrichment_prompt.py  search_prompt.py  table_enrichment_prompt.py
scripts/: 0_model_volume.ps1  0_run_vllm_server.ps1  0_vllm_server_config.yml  1_enrich_assets.py  1_generate_assets.py  1_generate_images.py  1_generate_tables.py  1_generate_text_only_md.py  1_run_paddleocr.ps1  1_text_chunking.py  2_build_document_indexes.py  3_generate_answer.py  4_run_query_pipeline.py  README.md  build_evidence.py  run_ocr.ps1  search_index.py  start_vllm_server.ps1
src/: asset_enricher.py  document_indexer.py  evidence_builder.py  generator_vlm.py  image_assets.py  image_enricher.py  main.py  ocr_batch.py  paddleocr_blocks.py  parse_enrichment_output.py  rag_config.py  retriever.py  table_assets.py  table_enricher.py  text_chunking.py  tools.py  vector_store.py
src/finsightrag/: __init__.py  (+12 more)
tests/: test_cli.py  test_evidence_builder.py  test_parse_enrichment_output.py  test_rag_config.py  test_retriever.py
(+173 files in other folders)
